2008-10-05  Michael Snyder  <msnyder@promb-2s-dhcp59.eng.vmware.com>

	* reverse.c (exec_reverse_once): Call do_cleanups explicitly.
	* infrun.c (handle_inferior_event): Fix typo in comment.

2008-10-04  Michael Snyder  <msnyder@vmware.com>

	* configure.tgt: Add linux-record.o here instead of in NATDEPFILES.
	* config/i386/linux.mh: Remove linux-record.o from NATDEPFILES.

2008-10-04  Michael Snyder  <msnyder@vmware.com>

	* target.c, target.h: Rename execdir to exec_direction.
	* record.c, record.h: Ditto.
	* reverse.c: Ditto.
	* remote.c: Ditto.

	* reverse.c (show_exec_direction_func): Don't error, just inform.

	* reverse.c (reverse-continue): Remove a comma from docs string,
	to avoid confusing output from 'apropos'.

2008-09-30  Hui Zhu  <teawater@gmail.com>
	Add process record and replay to GDB.
	* record.c, record.h: New files. Record and reverse target.
	* gdbarch.sh: New methods process_record and process_record_dasm.
	* gdbarch.c, gdbarch.h: Re-generate.
	* target.h (enum strata): Add record_stratum.
	* target.h (target_ops): Add a element "to_support_record_wait".
	Default value is 0. meaning that this target doesn't support record
	wait.  
	* target.c: Add include of "record.h".
	(update_current_target): Set the real beneath function.
	(add_target): Set the default value of "to_support_record_wait".
	pointers.
 	* Makefile.in: Add files record.c, record.o.

	Add process record and replay to Linux.
	* linux-record.c, linux-record.h: New files.
	* config/i386/linux.mh: Add linux-record.o to NATDEPFILES.
	* Makefile.in: Add files linux-record.c, linux-record.o.

	Add process record and replay to i386 architecture.
	* i386-linux-tdep.c (linux_record_tdep): New static variable. 
	I386 Linux record target-dependent stuff.
	(i386_linux_intx80_sysenter_record): New function. Record the 
	running message of I386 Linux system call.
	(i386_linux_init_ab): Initialize the linux_record_tdep. Add
	i386_linux_intx80_sysenter_record to struct tdep.