@@ -1,3 +1,10 @@
+2008-10-05  Hui Zhu  <teawater@gmail.com>
+
+	* infcmd.c (kill_if_already_running): If record target is used,
+	output special query.
+	* infrun.c (use_displaced_stepping): Return false if record/replay.
+	(proceed): Do not record state changes made by gdb in 'proceed'.
+	
 2008-10-05  Michael Snyder  <msnyder@promb-2s-dhcp59.eng.vmware.com>
 
 	* reverse.c (exec_reverse_once): Call do_cleanups explicitly.
